# iflow2api

./: .gitignore  BUILD_CHECKLIST.md  BUILD_GUIDE.md  CHANGES_SUMMARY.md  CLAUDE.MD  GITHUB_ACTIONS.md  GUI_README.md  LICENSE  OAUTH_INTEGRATION.md  QUICK_START.md  README.md  SETUP.md  TAURI_README.md  _converters_compat.py  _proxy_compat.py  build.py  build_agent.py  build_gui.py  build_nuitka.py  config.py  context_compressor.py  converters.py  gui.py  gui_modern.py  gui_pyqt.py  iflow_auth_cli.py  iflow_oauth.py  iflow_oauth_cli.py  iflow_token.py  index.html  main.py  package-lock.json  package.json  proxy.py  proxy_old.py  push_and_build.bat  read_limit_hook.py  requirements.txt  run_gui.bat  run_tauri_dev.bat  (+8 more)
.claude/: settings.local.json
.github/workflows/: build-exe.yml  build.yml
agent/: cli.py
app/: __init__.py  server.py
auth/: __init__.py  cli.py  token.py
converters/: __init__.py
core/: __init__.py  config.py  thinking.py
gui/: __init__.py  app.py
legacy/: iflow2api_init.py  proxy_old.py
proxy/: __init__.py  context_compressor.py  proxy.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src/components/layout/: Layout.tsx
src/components/navbar/: Navbar.tsx
src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Monitor.tsx  Settings.tsx
src/stores/: useConfigStore.ts
src/types/: index.ts
src/utils/: request.ts
