[package]
name = "iflow2api"
version = "1.0.0"
description = "iFlow2API - API Proxy Service"
authors = ["you"]
edition = "2021"

[lib]
name = "iflow2api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
